--- a/web/www/index.html
+++ b/web/www/index.html
@@ -2,8 +2,17 @@
 <html>
     <head>
         <title> TwitGallery </title>
+        <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     </head>
     <body>
-        Start 2
+        Start 3
+        <div id='target'></div>
+        <script>
+            $(document).ready(function(){
+                $.get("http://127.0.0.1:5000/test", function(data, status){
+                    $("#target").text(data);
+                });
+            });
+        </script>
     </body>
 </html>
