added image loading to web frontend

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Twitter Image Gallery</h1>
+        <hr>
         <div id="target"></div>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
         <script src="main.js"></script>
