--- a/web/www/index.html
+++ b/web/www/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>Twitter Image Gallery</h1>
+        <input id="user_input"></input>
+
         <hr>
         <div id="target"></div>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
