Added code to process custom users

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Twitter Image Gallery</h1>
         <input id="user_input"></input>
+        <button id="process_user_input">Process User</button>
+        <button id="get_user_images">Get images</button>
+        <div id="process_user_result"></div>
 
         <hr>
         <div id="target"></div>
