--- a/web/www/index.html
+++ b/web/www/index.html
@@ -13,8 +13,11 @@
         <div id="process_user_result"></div>
 
         <hr>
-        <div id="target"></div>
+        <div id="target">
+            <div id="target_01"></div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
