Switched to Packery, lol

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -14,10 +14,9 @@
 
         <hr>
         <div id="target">
-            <div id="target_01"></div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/packery/2.1.2/packery.pkgd.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
