Adjusted HTML layout

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -4,13 +4,19 @@
         <meta charset="UTF-8">
         <title>TwitGallery</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     </head>
     <body>
         <h1>Twitter Image Gallery</h1>
-        <input id="user_input"></input>
-        <button id="process_user_input">Process User</button>
-        <button id="get_user_images">Get images</button>
-        <div id="process_user_result"></div>
+        <div id="interactive_area">
+            <div id="input">
+                <input id="user_input"></input>
+            </div>
+            <div id="buttons">
+                <button id="process_user_input">Process User</button>
+                <button id="get_user_images">Get images</button>
+            </div>
+        </div>
 
         <hr>
         <div id="target">
