--- a/web/www/index.html
+++ b/web/www/index.html
@@ -7,18 +7,20 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     </head>
     <body>
-        <h1>Twitter Image Gallery</h1>
-        <div id="interactive_area">
-            <div id="input">
-                <input id="user_input"></input>
+        <div id="header">
+            <h1>Twitter Image Gallery</h1>
+            <div id="interactive_area">
+                <div id="input">
+                    <input id="user_input"></input>
+                </div>
+                <div id="buttons">
+                    <button id="process_user_input">Process User</button>
+                    <button id="get_user_images">Get images</button>
+                </div>
             </div>
-            <div id="buttons">
-                <button id="process_user_input">Process User</button>
-                <button id="get_user_images">Get images</button>
-            </div>
+            <hr>
         </div>
 
-        <hr>
         <div id="target">
         </div>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
