--- a/web/www/index.html
+++ b/web/www/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Twitter Image Gallery</h1>
+            <h1>Twitter Favorites Gallery</h1>
             <div id="interactive_area">
                 <div id="input">
                     <input id="user_input"></input>
@@ -17,8 +17,17 @@
                     <button id="process_user_input">Process User</button>
                     <button id="get_user_images">Get images</button>
                 </div>
+                <div id="process_user_result"></div>
             </div>
             <hr>
+        </div>
+
+        <div id="modal_fs" class="modal">
+            <div class="modal_box">
+                <div class="modal-content">
+                    <div id="picture_fs"></div>
+                </div>
+            </div>
         </div>
 
         <div id="target">
