Using additional metadata

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -25,6 +25,9 @@
         <div id="modal_fs" class="modal">
             <div class="modal_box">
                 <div class="modal-content">
+                    <div id="picture_data">
+                        Test
+                    </div>
                     <div id="picture_fs"></div>
                 </div>
             </div>
