Fetching small images for gallery creation

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -23,13 +23,11 @@
         </div>
 
         <div id="modal_fs" class="modal">
-            <div class="modal_box">
-                <div class="modal-content">
-                    <div id="picture_data">
-                        Test
-                    </div>
-                    <div id="picture_fs"></div>
+            <div class="modal_content">
+                <div id="picture_data">
+                    Test
                 </div>
+                <div id="picture_fs"></div>
             </div>
         </div>
 
