--- a/web/www/index.html
+++ b/web/www/index.html
@@ -31,8 +31,9 @@
             </div>
         </div>
 
-        <div id="target">
-        </div>
+        <div id="target"> </div>
+        <div id="footer">/u/Speff</div>
+
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/packery/2.1.2/packery.pkgd.js"></script>
         <script src="main.js"></script>
