--- a/web/www/index.html
+++ b/web/www/index.html
@@ -32,6 +32,7 @@
         </div>
 
         <div id="target"> </div>
+        <div id="end_results_target"></div>
         <div id="footer">/u/Speff</div>
 
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
