--- a/web/www/index.html
+++ b/web/www/index.html
@@ -11,7 +11,7 @@
             <div id="interactive_area">
                 <div id="input">
                     <span id="at_symbol">@</span>
-                    <span id="user_input" contenteditable="true"></span>
+                    <span id="user_input" contenteditable="true" spellcheck="false"></span>
                 </div>
                 <div id="buttons">
                     <button id="process_user_input">Process User</button>
