Consolidated grid - Success

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -32,6 +32,7 @@
         </div>
 
         <div id="target"> </div>
+        <div id="grid_invis"></div>
         <span class="hr_line">
         <div id="end_results_target"></div>
         <div id="footer">/u/Speff</div>
