--- a/web/www/index.html
+++ b/web/www/index.html
@@ -24,10 +24,7 @@
 
         <div id="modal_fs" class="modal">
             <div class="modal_content">
-                <div id="modal_close">X</div>
-                <div id="picture_data">
-                    Test
-                </div>
+                <div id="picture_data"> </div>
                 <div id="picture_fs"></div>
             </div>
         </div>
