Add page console line
Add page console line for debugging on mobile

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     </head>
     <body>
+        <div id="page_console">Test</div>
         <div id="header">
             <div id="interactive_area">
                 <div id="input">
