Check if rendered on a mobile device

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -32,6 +32,7 @@
 
         <div id="target"> </div>
         <div id="grid_invis"></div>
+        <div id="mobile_check"></div>
         <span class="hr_line">
         <div id="end_results_target"></div>
         <div id="footer">/u/Speff</div>
