Remove page console. Debugging no longer needed

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     </head>
     <body>
-        <div id="page_console">Test</div>
+        <!-- <div id="page_console">Test</div> -->
         <div id="header">
             <div id="interactive_area">
                 <div id="input">
@@ -32,7 +32,6 @@
 
         <div id="target"> </div>
         <div id="grid_invis"></div>
-        <div id="mobile_check"></div>
         <span class="hr_line">
         <div id="end_results_target"></div>
         <div id="footer">/u/Speff</div>
