Added header with new name

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <title>TwitGallery</title>
         <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Raleway" rel="stylesheet">
     </head>
     <body>
         <!-- <div id="page_console">Test</div> -->
         <div id="header">
 
+            <div id="header_text"> Ipso </div>
             <div id="interactive_area">
                 <div id="input">
                     <span id="at_symbol">@</span>
