Updated page references with new name

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>TwitGallery</title>
+        <title>0x-Ipso</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Raleway" rel="stylesheet">
     </head>
@@ -10,7 +10,7 @@
         <!-- <div id="page_console">Test</div> -->
         <div id="header">
 
-            <div id="header_text"> Ipso </div>
+            <div id="header_text"> 0x-Ipso </div>
             <div id="interactive_area">
                 <div id="input">
                     <span id="at_symbol">@</span>
