Move Twitter icon to top right of the page

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -22,9 +22,10 @@
                 </div>
                 <div id="process_user_result"></div>
             </div>
-        <div id="sign_in">
-            Sign in
-            <img src="twitter_icon.png"></img>
+        <div id="sign_in_section">
+            <div id="sign_in">
+                <img src="twitter_icon.png"></img>
+            </div>
         </div>
         <div id="signed_in_message"></div>
             <span class="hr_line">
