Refactor p4 - added option to post user status'

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -19,7 +19,8 @@
                 </div>
                 <div id="buttons">
                     <button id="process_user_input">Process User</button>
-                    <button id="get_user_images">Get images</button>
+                    <button id="get_user_favorites">Get favorites</button>
+                    <button id="get_user_posts">Get posts</button>
                 </div>
                 <div id="process_user_result"></div>
             </div>
