--- a/web/www/auth.html
+++ b/web/www/auth.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>0x-Ipso Auth Result</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Raleway" rel="stylesheet">
     </head>
     <body>
         <div id="signed_in_message"></div>
