Adds status message to ui

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -23,13 +23,13 @@
                 </div>
                 <div id="process_user_result"></div>
             </div>
-        <div id="sign_in_section">
-            <div id="sign_in">
-                <img src="twitter_icon.png"></img>
+            <div id="sign_in_section">
+                <div id="sign_in">
+                    <img src="twitter_icon.png"></img>
+                </div>
             </div>
-        </div>
-        <div id="signed_in_message"></div>
-            <span class="hr_line">
+            <div id="signed_in_message"></div>
+            <span class="hr_line"></span>
         </div>
 
         <div id="modal_fs" class="modal">
@@ -39,9 +39,13 @@
             </div>
         </div>
 
+        <div id="status_message_container">
+            <div id="status_message"></div>
+        </div>
+
         <div id="target"> </div>
         <div id="grid_invis"></div>
-        <span class="hr_line">
+        <span class="hr_line"></span>
         <div id="end_results_target"></div>
         <div id="footer">/u/Speff</div>
 
